[package]
name = "tet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.11.3", features = ["wayland"] }
#bitvec = "1.0.1"
#static_assertions = "1.1.0"
rand = "0.8.5"
termion = "2.0.3"

[[example]]
name = "terminal_game"
path = "examples/terminal_game/src/main.rs"

